# py-wallet

./: .env  README.md  main.py  manage.py  pyproject.toml
FeyiPay/: asgi.py  settings.py  urls.py  wsgi.py
notification/: models.py  services.py
notification/migrations/: 0001_initial.py  0002_initial.py  0003_remove_notification_reference_number_and_more.py  0004_remove_notification_user_notification_wallet.py  0005_rename_wallet_notification_wallet_number_and_more.py
services/: fund_wallet_service.py  onboarding_service.py  transfer_service.py
user/: models.py  serializers.py  services.py  tests.py  views.py
user/migrations/: 0001_initial.py
wallet/: models.py  serializers.py  services.py  urls.py  utils.py  views.py
wallet/migrations/: 0001_initial.py  0002_alter_transaction_idempotency_key.py  0002_alter_wallet_status.py  0003_alter_wallet_status.py
wallet/services/: create_wallet_service.py  fund_wallet_service.py  intra_transfer_service.py
